--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
   <header>
     <div class="header-inner">
       <div class="brand">
-        <img src="logo-elisa-costanzo.png" alt="Logo Elisa Costanzo" class="logo-img" />
+        <img src="elisa costanzo logo.png" alt="Logo Elisa Costanzo" class="logo-img" />
         <div class="brand-text">
           <div class="brand-name">Elisa Costanzo</div>
           <div class="brand-subtitle">Spazio di voce, espressione e presenza</div>
@@ -663,7 +663,7 @@
       </div>
       <div class="hero-image-card">
         <!-- QUI LA FOTO PROFILO -->
-        <img src="elisa-costanzo-profilo.png" alt="Elisa Costanzo - Foto profilo" />
+        <img src="elisa-costanzo-profilo.jpg" alt="Elisa Costanzo - Foto profilo" />
       </div>
     </section>
 
